--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -918,6 +918,13 @@ div.region.region-content > ol {
   padding-bottom: 7px;
 }
 
+/* Share buttons block */
+
+#atstbx .at-share-btn-elements {
+  margin-left: 23px;
+  margin-right: 25px;
+}
+
 /* Secondary block region */
 
 .well {
