Change main logo link to dev site

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -79,7 +79,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
+        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
