--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -207,9 +207,8 @@
   </div>
   <div class="col-md-6">
 		<ul>
-      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-and-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
       <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
-      <li><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
     </ul>
   </div>
 </div>
