Fix responsive behavior for forms

--- a/css/style.css
+++ b/css/style.css
@@ -6780,8 +6780,9 @@ li.node-readmore,
   background-color: #981e32;
   color: #fff; }
 
-.region-content form {
-  max-width: 500px; }
+.region-content form input,
+.region-content form textarea {
+  max-width: 50%; }
 
 .form-item {
   margin-bottom: 1em; }
@@ -6816,7 +6817,10 @@ ol.breadcrumb {
   body > div.main-container.container-fluid.js-quickedit-main-content > div {
     margin-top: -30px; }
   .region-content {
-    margin-top: 5px; } }
+    margin-top: 5px; }
+  .region-content form input,
+  .region-content form textarea {
+    max-width: 100%; } }
 
 /* Bootstrap Paragraphs for single column page layouts */
 .paragraph__column a {
@@ -7021,7 +7025,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 #edit-actions-submit {
   margin: 20px 20px 20px 0; }
 
-form h1, form h2, form h3, form h4, form h5, form h6, form p, form blockquote {
+form h1, form h2, form h3, form h4, form h5, form h6, form p, form blockquote, form ul, form ol, form table, form hr {
   margin-left: 0;
   margin-right: 0; }
 
