Add 992 breakpoint for .region-content form

--- a/css/style.css
+++ b/css/style.css
@@ -6925,14 +6925,15 @@ h2.hero-title {
   margin-left: 0;
   margin-right: 0; }
 
-.region-content form {
-  max-width: 50%; }
-
 .form-item {
   margin-bottom: 1em; }
 
 .select-wrapper {
   display: block; }
+
+@media (min-width: 992px) {
+  .region-content form {
+    max-width: 60%; } }
 
 @media (max-width: 991.99px) {
   .region-content form {
