--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -545,6 +545,33 @@ body > nav > div.navbar-header > button {
   border: 1px solid $gray;
 }
 
+.region-content button.btn-solid,
+.region-content a.btn-solid {
+  margin: 10px 10px 10px 0;
+  padding: 10px 20px 10px 20px;
+  box-shadow: none;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 0;
+  text-decoration: none;
+  color: $white;
+  background-color: $brand-primary;
+  border: 1px solid $brand-primary;
+  transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -webkit-transition: all .2s ease-out;
+  box-shadow: 1px 1px #000;
+}
+
+.region-content button.btn-solid:hover,
+.region-content a.btn-solid:hover,
+.region-content button.btn-solid:focus,
+.region-content a.btn-solid:focus {
+  background-color: $white;
+  color: $brand-primary;
+  border: 1px solid $white;
+}
+
 .table {
   border: 1px solid $light-gray;
   margin-top: 20px;
@@ -598,6 +625,10 @@ li.node-readmore,
 
 .views-element-container {
   margin-left: 25px;
+}
+
+.view-header h2 {
+  margin-left: 0;
 }
 
 .views-row h2,
