Dev site links added to template

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -79,7 +79,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
+        <a class="navbar-brand" href="http://www8dev.vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="http://www8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
@@ -144,7 +144,7 @@
   <div class="col-md-3">
   		<ul>
  			<li class="sitemap-section">Quick links</li>
-			<li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
+			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
@@ -156,8 +156,8 @@
   <div class="col-md-3">
   		<ul>
  			<li class="sitemap-section">Future Students</li>
-			<li><a href="/">Admissions</a></li>
-      <li><a href="/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
+			<li><a href="http://8dev.vancouver.wsu.edu">Admissions</a></li>
+      <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
 			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
 			<li>&nbsp;</li>
 			<li class="sitemap-section">Current Students</li>
@@ -207,7 +207,7 @@
   </div>
   <div class="col-md-6">
 		<ul>
-      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-and-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-and-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
       <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
     </ul>
   </div>
