--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -120,7 +120,7 @@
 
 <div class="header-logo">
   <div class="col-sm-6 col-md-6">
-    <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
+    <a href="http://www8dev.vancouver.wsu.edu"><img class="primary-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
   </div>
   <div class="col-sm-6 col-md-6">
     <a class="apply-button" href="http://8dev.vancouver.wsu.edu/admissions/apply">Apply now</a>
