--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -566,7 +566,7 @@ body > nav > div.navbar-header > button {
   transition: all .2s ease-out;
   -moz-transition: all .2s ease-out;
   -webkit-transition: all .2s ease-out;
-  box-shadow: 1px 1px #000;
+  box-shadow: 1px 1px black;
 }
 
 .region-content button.btn-solid:hover,
@@ -784,7 +784,6 @@ ol.breadcrumb {
   }
   img.social {
     width: 3em;
-    opacity: 0.65;
     padding: 8px;
   }
   blockquote {
@@ -803,10 +802,6 @@ ol.breadcrumb {
     color: $white;
     border-color: $white;
   }
-  img.social {
-	  filter: invert(100%);
-    opacity: 1;
-  }
 }
 
 .paragraph--type--xeno-hero__image {
@@ -819,7 +814,7 @@ ol.breadcrumb {
 h2.hero-title {
   text-align: center;
   font-size: 5.5em;
-  text-shadow: 3px 3px 0 black;
+  text-shadow: 1px 1px 1px black;
   padding: .5em;
   margin-top: 0;
   border-top: 0;
