--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -145,7 +145,7 @@
   		<ul>
  			<li class="sitemap-section">Quick links</li>
 			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
-			<li><a href="https://admin.vancouver.wsu.edu">Administration</a></li>
+			<li><a href="http://admin8dev.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
 			<li><a href="http://events8dev.vancouver.wsu.edu">Events Calendar</a></li>
