--- a/css/style.css
+++ b/css/style.css
@@ -6750,6 +6750,7 @@ li.node-readmore,
 .field--name-field-event-date-time,
 .field--name-field-event-location,
 .field--name-field-event-parking,
+.field--name-field-event-participate,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
 .feeds_feed__content,
@@ -6795,6 +6796,7 @@ li.node-readmore,
 .field--name-field-event-cost,
 .field--name-field-event-location,
 .field--name-field-event-parking,
+.field--name-field-event-participate,
 .field--name-field-event-sponsor,
 .field--name-field-event-website {
   color: #333333;
