--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -478,6 +478,10 @@ body > nav > div.navbar-header > button {
   color: $dark-gray;
 }
 
+.region-content {
+  margin-left: 18px;
+}
+
 .region-content ul li,
 .region-content ol li {
   padding-bottom: 5px;
@@ -619,8 +623,10 @@ li.node-readmore,
 .field--name-field-event-date-time,
 .field--name-field-event-location,
 .field--name-field-event-parking,
+.field--name-field-event-participate,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
+.field--name-field-news-post-date,
 .feeds_feed__content,
 .region-content form,
 .webform-confirmation__back,
@@ -671,10 +677,16 @@ li.node-readmore,
 .field--name-field-event-cost,
 .field--name-field-event-location,
 .field--name-field-event-parking,
+.field--name-field-event-participate,
 .field--name-field-event-sponsor,
 .field--name-field-event-website {
   color: $dark-gray;
   margin-bottom: 1em;
+}
+
+.field--name-field-news-post-date {
+  margin-bottom: 1em;
+  font-weight: bold;
 }
 
 .pager li > a,
