RSS import: add left-margin to ul

--- a/css/style.css
+++ b/css/style.css
@@ -6624,7 +6624,7 @@ body > nav > div.navbar-header > button {
 .region-content h4.label {
   color: #333333; }
 
-.region-content {
+.region-content ul {
   margin-left: 18px; }
 
 .region-content ul li,
