--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -478,7 +478,7 @@ body > nav > div.navbar-header > button {
   color: $dark-gray;
 }
 
-.region-content {
+.region-content ul {
   margin-left: 18px;
 }
 
