--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -148,7 +148,7 @@
 			<li><a href="http://admin8dev.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
-			<li><a href="http://events8dev.vancouver.wsu.edu">Events Calendar</a></li>
+			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu/parking/parking-services">Parking Services</a></li>
       <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
