--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1,6 +1,6 @@
 // WSU VANCOUVER SUBTHEME STYLES
 
-/* $brand-primary secondary colors */
+/* Secondary brand colors */
 
 $red: #c60c30;
 $dark-gray: #333333;
@@ -34,7 +34,6 @@ h1, h2, h3, h4, h5, h6 {
 
 table {
   padding-bottom: 1em;
-  width: 90%;
 }
 
 table th {
@@ -59,7 +58,7 @@ caption {
   color: $white;
 }
 
-/* Navbar */
+/* Bootstrap - navbar */
 
 .dropdown-menu {
   border: none;
@@ -221,7 +220,7 @@ body > nav > div.navbar-header > button {
   background: none;
 }
 
-/* Navbar small screens */
+/* Bootstrap - navbar collapsed, mobile */
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
@@ -252,7 +251,7 @@ body > nav > div.navbar-header > button {
   }
 }
 
-/* Logo and apply button header */
+/* Header - Logo and apply button */
 
 .header-logo .col-md-6 {
   border-bottom: 1px solid $light-gray;
@@ -301,7 +300,7 @@ body > nav > div.navbar-header > button {
   }
 }
 
-/* Primary and secondary block regions */
+/* Block region - primary and secondary - menus */
 
 .region-sidebar-first,
 .region-sidebar-second {
@@ -425,13 +424,13 @@ body > nav > div.navbar-header > button {
 
 }
 
-/* Highlighted region (status messages) */
+/* Block region - highlighted */
 
 .region-highlighted .alert {
   margin: 25px 25px 0 25px;
 }
 
-/* Content region */
+/* Block region - content */
 
 .region-content {
   margin-top: 50px;
@@ -442,7 +441,8 @@ body > nav > div.navbar-header > button {
   p + h2, p + h3, p + h4,
   table + h2, table + h3,
   ul + h2, ul + h3, ul + h4,
-  ol + h2, ol + h3, ol + h4 {
+  ol + h2, ol + h3, ol + h4,
+  ul + p, ol + p {
     margin-top: 40px;
   }
   h2 + table, h3 + table, table + p,
@@ -476,10 +476,6 @@ body > nav > div.navbar-header > button {
 
 .region-content h4.label {
   color: $dark-gray;
-}
-
-.region-content ul {
-  margin-left: 18px;
 }
 
 .region-content ul li,
@@ -586,9 +582,6 @@ body > nav > div.navbar-header > button {
   border: 1px solid $light-gray;
   margin-top: 20px;
   margin-bottom: 30px;
-  /*
-  display: block;
-  overflow-x: auto; */
 }
 
 .table-hover tbody tr:hover td,
@@ -606,7 +599,7 @@ body > nav > div.navbar-header > button {
 }
 
 .region-content table {
-  max-width: 90%;
+  max-width: 87%;
 } /* Prevent tables from invading secondary block region on wide layouts */
 
 h1.page-header,
@@ -635,6 +628,8 @@ li.node-readmore,
   margin-left: 25px;
 } /* Reset specific class margins to allow full screen images and layouts */
 
+/* Block region - content - views and fields */
+
 .views-element-container {
   margin-left: 25px;
 }
@@ -655,6 +650,12 @@ li.node-readmore,
   color: $text-color;
 }
 
+.field--name-field-news-body {
+  margin-right: 25px;
+}
+
+.field--name-field-news-body ul,
+.field--name-field-news-body ol,
 .field--item > ul,
 .field--item > ol {
   margin-left: 18px;
@@ -705,6 +706,8 @@ li.node-readmore,
   color: $white;
 }
 
+/* Admin UI and misc. overrides */
+
 legend {
   margin: 0;
   padding-top: 1em;
@@ -743,7 +746,7 @@ ol.breadcrumb {
   }
 }
 
-/* Bootstrap Paragraphs for single column page layouts */
+/* Bootstrap Paragraphs - landing page layouts */
 
 .paragraph__column {
   a {
@@ -801,6 +804,9 @@ ol.breadcrumb {
   blockquote {
     margin-top: 1.5em;
     border-left: 10px solid $brand-primary;
+  }
+  table {
+    max-width: 90%;
   }
 }
 
@@ -864,9 +870,13 @@ h2.hero-title {
   .paragraph--type--xeno-hero__image {
     background-attachment: local;
   }
+  .paragraph__column table {
+    display: block;
+    overflow-x: auto;
+  }
 }
 
-/* Main content - webforms */
+/* Block region - content - webforms */
 
 #edit-actions-submit {
   margin: 20px 20px 20px 0;
@@ -915,7 +925,7 @@ h2.hero-title {
   }
 }
 
-/* Main content - search results */
+/* Block region - content - search results */
 
 #search-form {
   margin-right: 25px;
@@ -945,7 +955,7 @@ div.region.region-content > ol {
   margin-left: 0;
 }
 
-/* Main content - Google Custom Search results */
+/* Block region - content - Google Custom Search results */
 
 #___gcse_0 > div {
   font-family: $font-family-sans-serif;
@@ -1007,7 +1017,7 @@ div.region.region-content > ol {
   margin-right: 25px;
 }
 
-/* Secondary block region */
+/* Block region - secondary - right or bottom sidebar */
 
 .well {
   padding-left: 0;
@@ -1036,7 +1046,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   }
 }
 
-/* Footer */
+/* Footer - sitemap, copyright, contentinfo */
 
 .footer-sitemap {
   border-top: 1px solid $light-gray;
