--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -864,6 +864,7 @@ h2.hero-title {
   .paragraph__column table {
     display: block;
     overflow-x: auto;
+    border: none;
   }
   .field--type-text-long {
     margin-bottom: 1em;
