--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -62,7 +62,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link rel="shortcut icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
+    <link rel="shortcut icon" href="http://www8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <a href="#main-content" class="visually-hidden focusable skip-link">
@@ -170,7 +170,7 @@
   		<ul>
         <li class="sitemap-section">Campus Safety</li>
   			<li><a href="https://admin.vancouver.wsu.edu/public-safety/public-safety">Public Safety</a></li>
-  			<li><a href="https://www.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
+  			<li><a href="http://www8dev.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
         <li>&nbsp;</li>
         <li class="sitemap-section">Alumni</li>
         <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/alumni-relations/alumni-association">Alumni Association</a></li>
