--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -323,6 +323,10 @@ body > nav > div.navbar-header > button {
   }
 } /* menu navigation */
 
+.region-sidebar-second {
+    margin-right: 25px;
+}
+
 .region-sidebar-second .block-views {
   h2.block-title {
     margin-left: 0;
