--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -421,7 +421,7 @@ body > nav > div.navbar-header > button {
 /* Block region - highlighted */
 
 .region-highlighted .alert {
-  margin: 25px 25px 0 25px;
+  margin: 60px 40px 0 25px;
 }
 
 /* Block region - content */
@@ -690,6 +690,7 @@ li.node-readmore,
   border-color: $brand-primary;
   padding: 10px 20px 10px 20px;
   margin-right: 40px;
+  margin-top: 20px;
   text-decoration: none;
   font-weight: bold;
 }
