--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -887,6 +887,9 @@ h2.hero-title {
   margin-left: 0;
   margin-right: 0;
   }
+  input, textarea {
+  -webkit-appearance: caret;
+  }
 }
 
 .form-control {
