--- a/css/style.css
+++ b/css/style.css
@@ -6401,20 +6401,16 @@ body > nav > div.navbar-header > button {
   box-shadow: none; }
 
 #bs-primary-navbar-collapse-1 ::-webkit-input-placeholder {
-  /* Chrome */
   color: #fff; }
 
 #bs-primary-navbar-collapse-1 :-ms-input-placeholder {
-  /* IE 10+ */
   color: #fff; }
 
 #bs-primary-navbar-collapse-1 ::-moz-placeholder {
-  /* Firefox 19+ */
   color: #fff;
   opacity: 1; }
 
 #bs-primary-navbar-collapse-1 :-moz-placeholder {
-  /* Firefox 4 - 18 */
   color: #fff;
   opacity: 1; }
 
@@ -6490,7 +6486,7 @@ body > nav > div.navbar-header > button {
   .header-logo .col-md-6 {
     display: none; } }
 
-/* Block region - primary and secondary - menus */
+/* Block region - primary and secondary */
 .region-sidebar-first,
 .region-sidebar-second {
   margin-top: 55px;
@@ -6522,7 +6518,7 @@ body > nav > div.navbar-header > button {
     color: #981e32;
     border-color: #981e32; }
 
-/* menu navigation */
+/* Menus */
 .region-sidebar-second {
   margin-right: 25px; }
 
@@ -6536,6 +6532,26 @@ body > nav > div.navbar-header > button {
 
 .region-sidebar-second .block-views .field-content a:hover {
   color: #595959; }
+
+.well {
+  padding-left: 0;
+  margin-top: 10px;
+  border: 0;
+  box-shadow: none;
+  background-color: transparent; }
+  .well ul li, .well ol li {
+    padding-bottom: 5px; }
+
+.well img {
+  max-width: 100%; }
+
+h2.block-title,
+.well img {
+  margin-top: 25px; }
+
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2) a,
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) a {
+  text-decoration: underline; }
 
 #block-bootstrap-sass-wsuv-search {
   margin-left: 25px; }
@@ -6753,10 +6769,13 @@ li.node-readmore,
   margin-right: 25px;
   margin-left: 25px; }
 
-/* Reset specific class margins to allow full screen images and layouts */
+/* Reset specific class margins to allow full screen layouts */
 /* Block region - content - views and fields */
 .views-element-container {
   margin-left: 25px; }
+
+.view-content {
+  margin-right: 50px; }
 
 .view-header h2 {
   margin-left: 0; }
@@ -6778,7 +6797,8 @@ li.node-readmore,
 .field--name-field-news-body ol,
 .field--item > ul,
 .field--item > ol {
-  margin-left: 18px; }
+  margin-left: 18px;
+  margin-right: 25px; }
 
 .views-row,
 .field--name-body {
@@ -6810,7 +6830,6 @@ li.node-readmore,
   border-radius: 4px;
   border-color: #981e32;
   padding: 10px 20px 10px 20px;
-  margin-right: 40px;
   margin-top: 20px;
   text-decoration: none;
   font-weight: bold; }
@@ -6819,6 +6838,9 @@ li.node-readmore,
 .pager li > a:focus {
   background-color: #981e32;
   color: #fff; }
+
+.pager .next > a {
+  margin-right: 40px; }
 
 /* Admin UI and misc. overrides */
 legend {
@@ -7065,27 +7087,6 @@ div.region.region-content > ol {
 #atstbx .at-share-btn-elements {
   margin-left: 23px;
   margin-right: 25px; }
-
-/* Block region - secondary - right or bottom sidebar */
-.well {
-  padding-left: 0;
-  margin-top: 10px;
-  border: 0;
-  box-shadow: none;
-  background-color: transparent; }
-  .well ul li, .well ol li {
-    padding-bottom: 5px; }
-
-.well img {
-  max-width: 100%; }
-
-h2.block-title,
-.well img {
-  margin-top: 25px; }
-
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2) a,
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) a {
-  text-decoration: underline; }
 
 /* Footer - sitemap, copyright, contentinfo */
 .footer-sitemap {
