--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -183,17 +183,17 @@ body > nav > div.navbar-header > button {
 }
 
 #bs-primary-navbar-collapse-1 {
-  ::-webkit-input-placeholder { /* Chrome */
+  ::-webkit-input-placeholder {
   color: $white;
   }
-  :-ms-input-placeholder { /* IE 10+ */
+  :-ms-input-placeholder {
   color: $white;
   }
-  ::-moz-placeholder { /* Firefox 19+ */
+  ::-moz-placeholder {
   color: $white;
   opacity: 1;
   }
-  :-moz-placeholder { /* Firefox 4 - 18 */
+  :-moz-placeholder {
   color: $white;
   opacity: 1;
   }
@@ -290,7 +290,7 @@ body > nav > div.navbar-header > button {
   }
 }
 
-/* Block region - primary and secondary - menus */
+/* Block region - primary and secondary */
 
 .region-sidebar-first,
 .region-sidebar-second {
@@ -321,7 +321,7 @@ body > nav > div.navbar-header > button {
     color: $brand-primary;
     border-color: $brand-primary;
   }
-} /* menu navigation */
+} /* Menus */
 
 .region-sidebar-second {
     margin-right: 25px;
@@ -338,6 +338,33 @@ body > nav > div.navbar-header > button {
   }
   .field-content a:hover {
     color: $text-color;
+  }
+}
+
+.well {
+  padding-left: 0;
+  margin-top: 10px;
+  border: 0;
+  box-shadow: none;
+  background-color: transparent;
+  ul li, ol li {
+    padding-bottom: 5px;
+  }
+}
+
+.well img {
+  max-width: 100%;
+}
+
+h2.block-title,
+.well img {
+  margin-top: 25px;
+}
+
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2),
+body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) {
+  a {
+    text-decoration: underline;
   }
 }
 
@@ -385,37 +412,9 @@ body > nav > div.navbar-header > button {
   border-bottom: 1px solid $light-gray;
 }
 
-.responsive-menus.responsified .responsive-menus-simple li a.active {
-
-}
-
-.responsive-menus.responsified .responsive-menus-simple li ul li a {
-
-}
-
 .responsive-menus.responsified .responsive-menus-simple li a:hover {
   color: $brand-primary;
   text-decoration: underline;
-}
-
-.responsive-menus.responsified .responsive-menus-simple li a:focus {
-
-}
-
-.responsive-menus.responsified .responsive-menus-simple li.first a {
-
-}
-
-.responsive-menus.responsified .responsive-menus-simple li ul li.first a {
-
-}
-
-.responsive-menus.responsified .responsive-menus-simple a {
-
-}
-
-.responsive-menus.responsified .responsive-menus-simple li ul li ul li a {
-
 }
 
 /* Block region - highlighted */
@@ -620,12 +619,16 @@ li.node-readmore,
 .webform-confirmation__message {
   margin-right: 25px;
   margin-left: 25px;
-} /* Reset specific class margins to allow full screen images and layouts */
+} /* Reset specific class margins to allow full screen layouts */
 
 /* Block region - content - views and fields */
 
 .views-element-container {
   margin-left: 25px;
+}
+
+.view-content {
+  margin-right: 50px;
 }
 
 .view-header h2 {
@@ -653,6 +656,7 @@ li.node-readmore,
 .field--item > ul,
 .field--item > ol {
   margin-left: 18px;
+  margin-right: 25px;
 }
 
 .views-row,
@@ -689,7 +693,6 @@ li.node-readmore,
   border-radius: 4px;
   border-color: $brand-primary;
   padding: 10px 20px 10px 20px;
-  margin-right: 40px;
   margin-top: 20px;
   text-decoration: none;
   font-weight: bold;
@@ -699,6 +702,10 @@ li.node-readmore,
 .pager li > a:focus {
   background-color: $brand-primary;
   color: $white;
+}
+
+.pager .next > a {
+  margin-right: 40px;
 }
 
 /* Admin UI and misc. overrides */
@@ -1015,35 +1022,6 @@ div.region.region-content > ol {
 #atstbx .at-share-btn-elements {
   margin-left: 23px;
   margin-right: 25px;
-}
-
-/* Block region - secondary - right or bottom sidebar */
-
-.well {
-  padding-left: 0;
-  margin-top: 10px;
-  border: 0;
-  box-shadow: none;
-  background-color: transparent;
-  ul li, ol li {
-    padding-bottom: 5px;
-  }
-}
-
-.well img {
-  max-width: 100%;
-}
-
-h2.block-title,
-.well img {
-  margin-top: 25px;
-}
-
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2),
-body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) {
-  a {
-    text-decoration: underline;
-  }
 }
 
 /* Footer - sitemap, copyright, contentinfo */
