--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -11,7 +11,7 @@
  */
 
 // Set the proper directory for the Bootstrap Glyphicon font.
-$icon-font-path: '/Users/brianbates1d/Sites/devdesktop/drupal-8.5.6/themes/bootstrap/assets/fonts/bootstrap/';
+$icon-font-path: '/sites/all/themes/bootstrap/assets/fonts/bootstrap/';
 
 // SCAFFOLDING
 
