Minor tweaks for Google CSE

--- a/css/style.css
+++ b/css/style.css
@@ -7057,11 +7057,17 @@ div.region.region-content > ol {
 
 #gsc-iw-id1 {
   height: 50px;
-  font-size: 2em;
-  margin-left: -28px; }
+  font-size: 2em; }
 
 #___gcse_0 > div > div > form {
   margin-left: 1em; }
+
+#gs_cb50 {
+  color: #333333;
+  padding: .5em; }
+
+.gsst_a {
+  margin-right: -10em; }
 
 .gsc-search-button > button {
   background-color: #981e32;
@@ -7069,10 +7075,6 @@ div.region.region-content > ol {
   height: 52px;
   padding: .5em;
   margin-top: -1px; }
-
-#gs_cb50 {
-  color: #333333;
-  padding: .5em; }
 
 .gsc-webResult .gsc-result:hover {
   margin-left: -1px;
