Align fields for Alert content type

--- a/css/style.css
+++ b/css/style.css
@@ -6773,7 +6773,7 @@ li.node-readmore,
   margin-left: 25px; }
 
 /* Reset specific class margins to allow full screen layouts */
-/* Block region - content - views and fields */
+/* Block region - content - fields and views */
 .views-element-container {
   margin-left: 25px; }
 
@@ -6796,6 +6796,15 @@ li.node-readmore,
 
 .field--item {
   color: #595959; }
+
+.field--name-field-alert-post-date {
+  margin-left: 10px;
+  margin-top: -1em; }
+
+.field--name-field-alert-full-message {
+  margin-left: -15px; }
+  .field--name-field-alert-full-message p {
+    margin-top: 1em; }
 
 .field--name-field-news-body {
   margin-right: 25px; }
